welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: value vubiscuit is not a member of object Boolean
Boolean vubiscuit() = false
        ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 7) {
         ^Program:17: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit()==true) {
  ^